--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/gtracy/madison-transit-apps#readme",
   "dependencies": {
+    "aws-serverless-express": "^3.4.0",
+    "express": "^4.18.1",
+    "pino": "^8.6.1",
+    "pino-http": "^8.2.1",
     "twilio": "^3.82.1"
-  },
-  "devDependencies": {
   }
 }
