--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/gtracy/madison-transit-apps#readme",
   "dependencies": {
     "aws-serverless-express": "^3.4.0",
+    "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "pino": "^8.6.1",
     "pino-http": "^8.2.1",
