--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "got": "^11.8.3",
     "pino": "^8.6.1",
     "pino-http": "^8.2.1",
     "twilio": "^3.82.1"
