--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "madison-transit-apps",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "sample apps built on top of the Madison Transit API",
   "main": "app.js",
   "scripts": {
@@ -23,8 +23,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "got": "^11.8.3",
+    "path": "^0.12.7",
     "pino": "^8.6.1",
     "pino-http": "^8.2.1",
+    "serve-favicon": "^2.5.0",
     "twilio": "^3.82.1"
   }
 }
